Playing around with tedious, not got it fully working yet. Need to callback the result for use

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "express-test",
-  "version": "1.0.0",
+  "name": "spark",
+  "version": "0.1.0",
   "scripts": {
     "client": "cd client && yarn start",
     "server": "cd api && nodemon express.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "tedious": "^2.6.2"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
