--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tedious": "^2.6.2"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "concurrently": "^3.5.0",
+    "cypress": "^3.1.0"
   }
 }
