--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "^4.16.2",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.6.2"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
