--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
     "express": "^4.16.2",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
