--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "react": "^16.3.2",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.3.2",
     "react-redux": "^6.0.0",
     "react-scripts": "^2.1.3",
