--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.24",
+    "@fortawesome/free-solid-svg-icons": "^5.11.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.18.0",
-    "react": "^16.3.2",
-    "react-dnd": "^7.0.2",
-    "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^6.0.0",
-    "react-scripts": "^2.1.3",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "axios": "^0.18.1",
+    "react": "^16.9.0",
+    "react-dnd": "^7.7.0",
+    "react-dnd-html5-backend": "^7.7.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^6.0.1",
+    "react-scripts": "^2.1.8",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
