--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "cd api && nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "cleardb": "node api/support/dropData.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
