--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.4",
     "morgan": "^1.9.1",
