--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/preset-react": "^7.16.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.8.4",
+    "mongoose": "^6.0.13",
     "morgan": "^1.9.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "concurrently": "^3.6.1",
-    "cypress": "^3.8.1"
+    "cypress": "^9.0.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-react": "^7.27.0"
   }
 }
