--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.16.3",
-    "@babel/preset-react": "^7.16.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
@@ -19,6 +17,9 @@
     "react-scripts": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/preset-react": "^7.16.0",
     "concurrently": "^3.6.1",
     "cypress": "^9.0.0",
     "eslint": "^7.11.0",
