--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.16.0",
     "concurrently": "^3.6.1",
     "cypress": "^9.0.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.11.0",
     "eslint-plugin-react": "^7.27.0"
   }
