--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.9.1",
-    "prop-types": "^15.7.2",
+    "nodemon": "^2.0.15",
     "react-scripts": "^4.0.3"
   },
   "devDependencies": {
